k8s/manifests/longhorn-ingress/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    # nginx Ingressの"nginx.ingress.kubernetes.io/rewrite-target"と同等のアノテーション
    traefik.ingress.kubernetes.io/router.middlewares: default-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
    host: longhorn.shahu.ski
